<resources>
    <string name="app_name">FoodApp</string>
    <string name="title_splash_screen">BAU</string>
    <string name="title_boarding1">Choose Your Favorite Food</string>
    <string name="title_boarding2">Delicious Food Menu</string>
    <string name="title_boarding3">We Have 9000+ Review On Our App</string>
    <string name="text_boarding1">Vegetarian Meat / Dishes Pasta Dishes / Salads / Desserts / Soups / Seafood</string>
    <string name="text_boarding2">Vegetarian Meat / Dishes Desserts / Soups / Seafood</string>
    <string name="text_boarding3">We Have 6000+ User Reviews, You Can Check In The Application Store</string>
    <string name="title_welcome">Welcome</string>
    <string name="text_welcome">Come join us now create an account or login</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">You already have an account?</string>
    <string name="nested_scroll">My Nested Scroll</string>
    <string name="my_image">Image</string>
    <string name="btn_started">Get Started</string>
    <string name="title_sign_in">Hello Again!</string>
    <string name="title_sign_up">Welcome!</string>
    <string name="hint_email_or_phone_number">Phone number</string>
    <string name="hint_password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>