<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity"
    android:contentDescription="@string/nested_scroll">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left_long_arrow"
            android:id="@+id/arrowBack"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:tint="@color/primaryColor"/>

        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_sign_up"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/my_image"/>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_sign_up"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/img1"
            android:gravity="center"
            android:layout_marginTop="10dp"/>


        <EditText
            android:id="@+id/edEmailOrPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv1"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_bg_edit_text"
            android:hint="@string/hint_email_or_phone_number"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edEmailOrPhoneNumber"
            android:layout_marginTop="18dp"
            android:background="@drawable/custom_bg_edit_text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="8dp"
            android:drawableEnd="@drawable/hide"/>

        <EditText
            android:id="@+id/edRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edPassword"
            android:layout_marginTop="18dp"
            android:background="@drawable/custom_bg_edit_text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="8dp"
            android:drawableEnd="@drawable/hide"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/custom_primary_btn"
            app:backgroundTint="@null"
            android:text="@string/next"
            android:textSize="18sp"
            android:id="@+id/btnSignIn"
            android:layout_below="@id/edRePassword"
            android:layout_marginTop="18dp"/>

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/btnSignIn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:layout_marginTop="8dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_below="@id/tvOr"
            android:layout_marginHorizontal="8dp"
            android:id="@+id/layoutGoogle"
            android:padding="8dp"
            android:background="@drawable/custom_border_black">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up_with_google"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_below="@id/layoutGoogle"
            android:layout_marginHorizontal="8dp"
            android:id="@+id/layoutFacebook"
            android:padding="8dp"
            android:backgroundTint="@color/facebookBgColor"
            android:background="@drawable/custom_border_black">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up_with_facebook"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/layoutFacebook"
            android:gravity="center"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:id="@+id/tvGoToSignIn"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginLeft="2dp"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>